--- a/admin/src/app/layouts/main-layout/main-layout.component.html
+++ b/admin/src/app/layouts/main-layout/main-layout.component.html
@@ -1,11 +1,5 @@
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark bg-primary" [containerInside]="false">
-    <mdb-navbar-brand><a class="navbar-brand" href="/">MovieReview</a></mdb-navbar-brand>
-    <links>
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a [routerLink]="['/movies']" class="nav-link waves-light" mdbWavesEffect>Movies</a>
-        </li>
-      </ul>
-    </links>
-</mdb-navbar>
-<ng-content></ng-content>
+<app-my-navbar></app-my-navbar>
+<div class="main-content">
+    <ng-content></ng-content>
+</div>
+<app-my-footer></app-my-footer>
