--- a/admin/src/app/pages/movies-page/movies-page.component.html
+++ b/admin/src/app/pages/movies-page/movies-page.component.html
@@ -1,51 +1,44 @@
 
 <div class="container">
+    <h2 class="my-3">All Movies</h2>
+    <hr>
     <div class="row my-5">
-        <div class="col-4">
+        <div class="col-sm-3">
             <input type="text" class="form-control" placeholder="Search title..." [(ngModel)]="filters.keyword" (input)="changeKeyword($event)">
         </div>
-        <div class="col-8" *ngIf="totalPages > 0">
-            <nav aria-label="Page navigation example">
-                <ul class="pagination pagination-circle pg-blue">
-                  <li class="page-item" [ngClass]="{'disabled': filters.page === 1}" (click)="changePage(1)"><a class="page-link" mdbWavesEffect>First</a></li>
-                  
-                  <li class="page-item" [ngClass]="{'disabled': filters.page === 1}" (click)="changePage(filters.page - 1)">
-                    <a class="page-link" aria-label="Previous" mdbWavesEffect>
-                      <span aria-hidden="true">&laquo;</span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                  </li>
+        <div class="col-sm-6"></div>
+        <div class="col-sm-3">
+            <a routerLink="/movies/insert" class="btn btn-block btn-success">Create movie</a>
+        </div>
 
-                  <li class="page-item" (click)="changePage(page)" [ngClass]="{'active': page === filters.page}" *ngFor="let page of pages"><a class="page-link" mdbWavesEffect>{{ page }}</a></li>
-                 
-                  <li class="page-item" [ngClass]="{'disabled': filters.page === pages.length}" (click)="changePage(filters.page + 1)">
-                    <a class="page-link" aria-label="Next" mdbWavesEffect>
-                      <span aria-hidden="true">&raquo;</span>
-                      <span class="sr-only">Next</span>
-                    </a>
-                  </li>
-                  <li class="page-item" (click)="changePage(pages.length)" [ngClass]="{'disabled': pages.length === filters.page}"><a class="page-link"  mdbWavesEffect>Last</a></li>
-                </ul>
-              </nav>
+        <div class="col-12 my-3" *ngIf="pagination.totalPages > 0">
+            <app-my-pagination 
+                [pagination]="pagination" 
+                (onChangePage)="changePage($event)"></app-my-pagination>
+        </div>
+
+        <div class="col-12 my-3">
+            {{ totalMovies }} movies found
         </div>
     </div>
+
     <div class="row text-center" *ngIf="isLoading">
         <div class="col-12">
-            <div class="spinner-border text-success" role="status">
-                <span class="sr-only">Loading...</span>
-            </div>
+            <app-my-loader></app-my-loader>
         </div>
     </div>
-    <div class="row">
-        <div class="col-3" *ngFor="let movie of movies">
+
+    <div class="row" *ngIf="!isLoading">
+        <div class="col-lg-2 col-md-3 col-sm-4 mb-3" *ngFor="let movie of movies">
             <mdb-card>
                 <mdb-card-img src="{{ movie.image }}" alt="{{ movie.title }}"></mdb-card-img>
                 <mdb-card-body>
                   <mdb-card-title>
-                    <h4>{{ movie.title }}</h4>
+                    <h4 style="font-size: 1em;">{{ movie.title }}</h4>
                   </mdb-card-title>
                   <!-- <mdb-card-text></mdb-card-text> -->
-                  <a [routerLink]="['/movies/details', movie.id]" href="#" mdbBtn color="primary" mdbWavesEffect>Details</a>
+                  <a [routerLink]="['/movies/details', movie.id]" 
+                    href="#" mdbBtn color="primary" class="float-right btn-custom" mdbWavesEffect>Details</a>
                 </mdb-card-body>
             </mdb-card>
         </div>
@@ -53,11 +46,7 @@
 
     <div class="row" *ngIf="!isLoading && movies.length === 0">
        <div class="col-12">
-            <h3 class="text-center">No Movies Found</h3>
+            <app-notfound [message]="'No Movies Found'"></app-notfound>
        </div>
-    </div>
-
-    <div class="row">
-        <button class="btn btn-primary" *ngIf="canLoadMoreMovies">Load more</button>
     </div>
 </div>
