add security client

--- a/admin/src/app/layouts/main-layout/main-layout.component.html
+++ b/admin/src/app/layouts/main-layout/main-layout.component.html
@@ -1,4 +1,4 @@
-<app-my-navbar></app-my-navbar>
+<app-my-navbar *ngIf="isAuth"></app-my-navbar>
 <div class="main-content">
     <ng-content></ng-content>
 </div>
